<?xml version="1.0"?>
<package format="2">
  <name>build_state_logger</name>
  <version>0.0.0</version>
  <description>
    This tool allows to log the state of the repositories within a catkin workspace at compile/install time.
  </description>

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>

  <license>LGPL</license>

  <author>Matthias Gruhler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python-gitpython-pip</exec_depend>

</package>
